Update to example doc

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -70,7 +70,7 @@
 
 <p>Here are the links to the documents we have created ordered by theme.</p>
 
-<p><a href="../docs/example">Example</a></p>
+<p><a href="../docs/example_document">Example</a></p>
 
       </div>
     </div>
