--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ anything computational you can! Read this guide to get started
 <li><em>Status</em>: incomplete</li>
 <li><em>Author(s)</em>: </li>
 </ul></li>
+<li><a href="/test-cge/docs/developing_this_website.md/">Developing this website</a>
+
+<ul>
+<li><em>Status</em>: complete</li>
+<li><em>Author(s)</em>: Dom Bennett</li>
+</ul></li>
 <li><a href="/test-cge/docs/git_advanced/">Git advanced</a>
 
 <ul>
