Added Will's UNIX guide

--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@ anything computational you can! Read this guide to get started
 <li><em>Status</em>: incomplete</li>
 <li><em>Author(s)</em>: </li>
 </ul></li>
+<li><a href="/test-cge/docs/unix_ssh_intro/">UNIX (and SSH) introduction</a>
+
+<ul>
+<li><em>Status</em>: complete</li>
+<li><em>Author(s)</em>: Will Pearse</li>
+</ul></li>
 </ul>
 
       </div>
